--- a/docroot/WEB-INF/src/log4j.properties
+++ b/docroot/WEB-INF/src/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=INFO, CONSOLE2
 
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=(Analyze)[%-5p] %rms %d{ABSOLUTE} [%c{1}:%L] %m%n
+log4j.appender.CONSOLE2=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE2.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE2.layout.ConversionPattern=(Analyze2)[%-5p] %rms %d{ABSOLUTE} [%c{1}:%L] %m%n
 #example log output:
 #(Analyze)[INFO] 3599ms 15:03:46,125  [AnalysisThread:88] ---  AnalysisThread.run() info -------
 
